# render-lab

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  thoughts.txt
CMake/: AddGitSubmodule.cmake  CopyVendorOutput.cmake  SetVendorOutput.cmake
lab/: CMakeLists.txt
lab/res/models/bloody_floor/: bloody_floor.mtl
lab/res/models/lighting_sphere/: lighting_sphere.fbx
lab/res/models/office_window/: office_window.fbx  office_window.mtl
lab/res/models/quad/: quad.fbx
lab/res/models/skybox/textures/: galaxy+Z.tga  galaxy-X.tga  galaxy-Z.tga
lab/res/models/sponza_horror_scene/: scene.gltf
lab/res/models/test_box/: test_box.fbx
lab/res/models/world/: world.fbx
lab/res/shaders/: gl_basic.frag  gl_basic.vert  gl_basic_lighting.frag  gl_basic_lighting.vert  gl_debug_normal.frag  gl_debug_normal.geom  gl_horror_scene.vert  gl_reflect.frag  gl_reflect.vert  gl_screen.frag  gl_screen.vert  gl_skybox.frag  gl_skybox.vert
lab/src/: entry_point.cpp  pch.hpp
lab/src/application/: application.cpp  application.hpp
lab/src/backend/: framebuffer.cpp  framebuffer.hpp  glfw.cpp  glfw.hpp  opengl.cpp  opengl.hpp
lab/src/buffers/: framebuffer.cpp  framebuffer.hpp  uniform_buffer.cpp
lab/src/camera/: camera.cpp  camera.hpp
lab/src/core/: application.cpp  application.hpp  assert.hpp  core.hpp  log.hpp  utils.hpp  window.hpp
lab/src/renderer/: framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  primitive.cpp  primitive.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  uniform_buffer.hpp
lab/src/scene/: scene.cpp  scene.hpp
lab/src/scene/entities/: scene_entity.cpp  scene_entity.hpp
lab/src/scene/entities/lights/: lighting_sphere.cpp  lighting_sphere.hpp
lab/src/scene/entities/skybox/: skybox.cpp  skybox.hpp
lab/src/scene/entities/sponza/: sponza.cpp  sponza.hpp
lab/src/scene_entities/scene_1/ground/: ground.cpp  ground.hpp
lab/src/scene_entity/: scene_entity.hpp
lab/src/scenes/: i_scene.hpp  scene_entity.cpp  scene_entity.hpp
lab/src/scenes/horror_scene/: horror_scene.cpp  horror_scene.hpp
lab/src/scenes/horror_scene/entities/: ground.cpp  ground.hpp
lab/src/scenes/scene1/: scene.cpp  scene.hpp
lab/src/scenes/skybox/: skybox.cpp  skybox.hpp
lab/src/shader/: shader.cpp  shader.hpp
lab/src/window/: window.cpp  window.hpp
res/models/ocean_scene/: ocean.glb  untitled.glb
res/models/resident_evil_scene/dining_room/: scene.gltf
res/models/skybox/textures/: galaxy+X.tga  galaxy+Y.tga  galaxy-Y.tga
res/models/sun/: sun.gltf
res/shaders/: gl_basic.frag  gl_basic_lighting.frag  gl_debug_normal.vert  gl_dining_room.frag  gl_dining_room.vert  gl_grid.frag  gl_grid.vert  gl_ocean.frag  gl_ocean.vert  gl_scene.frag  gl_scene.vert  gl_screen.vert
src/: assert.hpp  camera.cpp  camera.hpp  entry_point.cpp  framebuffer.cpp  framebuffer.hpp  gui.cpp  gui.hpp  log.cpp  log.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  opengl.cpp  opengl.hpp  pch.hpp  raw_data.cpp  raw_data.hpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  shader.cpp  shader.hpp  singleton.hpp  utils.hpp  window.cpp  window.hpp
src/scenes/: resident_evil.cpp  resident_evil.hpp  scene.hpp
